	foo.jld with (8,1.0,1.0533660260935827,1.3006370929184012) generates some pretty good Shakespeare.
	So 1.3 seems reasonable.  Figure out how to get there fastest.

	* ideas:
	- speed comparison with barret code
	- list prob dist
	- list compound ops
	- compile kwargs
	- forw kwargs
	- sforw/sback
	- size inference
	- setup amazon machine.
	- introduce compiler kwargs in one paragraph, example.
	- have a table of defined kfun.
	- put dropout example back where it was.
	- call the option dropout, not training.
	- show source for minibatch, make it more readable.
	- rename charlm minibatch to something else.
	- in the paper explain the bayes - pretraining connection.
	- add save and best options to charlm, write a generator with temperature.
	- is batch norm a better gclip alternative?
	- do we need rmsprop or adam?
	- how many hidden states does the conv char lm paper use?
	  - small=2x300, large=2x650
	  - for the V=10k mikolov data.
	  - bptt 35 time steps (words?)
	  - batch size of 20 and 100
	  - 25 epochs
	  - dropout=0.5
	  - gclip=5
	- ashish said that didn't work without highway networks, do we need them?
	- wrap charlm up and start yonatan.
	- profile lstm and figure out multi-cpu.
	- play with charlm batch size!
	+ work on lorelei tokenization?
	- work on yonatan example?
	- finish dropout example
	- write karpathy demo for rnns, or rewrite rnnlm, or copy with words
	- have both dropout and a separate conditional section with rnn example?
	- work on char-conv based lm/mt model?

	* TODO:
	DONE loadnet, savenet
	DONE example: karpathy character based models, generating wikipedia etc. inputless networks with random generators
	0001 - update docs, remove dead code, update comments, check src TODO, - src/op/compound.jl: finish documentation for all ops.
	0000 docs: fix knet.svg
	0001 example: character convolution models: its got good notation, lstm, conv, highway networks, language modeling... lm paper: github.com/yoonkim/lstm-char-cnn 1508.06615v4.pdf