@@ -33,7 +33,7 @@ include("op/lrn.jl")
 include("op/nce.jl")
 include("op/pool.jl")
 include("op/genop.jl")
-include("net.jl");              export setp, wnorm, gnorm, reset!, savenet, loadnet, clean #export Reg, Net, set!, inc!, registers, params, ninputs, out, dif, stack_isempty, stack_empty!, 
+include("net.jl");              export setp, wnorm, gnorm, reset!, clean #export Reg, Net, set!, inc!, registers, params, ninputs, out, dif, stack_isempty, stack_empty!, 
 include("net/forw.jl");         export forw, sforw
 include("net/back.jl");         export back, sback
 include("net/initforw.jl")
