@@ -8,6 +8,8 @@
 	So 1.3 seems reasonable.  Figure out how to get there fastest.
 
 	* ideas:
+	- commit charnn once experiments done
+	- get rid of loadnet savenet
 	- speed comparison with barret code
 	- list prob dist
 	- list compound ops
